replace anthropic-rs with clust client for Anthropic API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anthropic = { git="https://github.com/AbdelStark/anthropic-rs.git" }
 cc = "=1.0.83"
 clap = { version = "4.2.7", features = ["derive"] }
+clust = "0.5.0"
 home = "0.5.9"
 inquire = { git = "https://github.com/mikecvet/inquire.git", branch = "history" }
 llama_cpp_rs = "0.3.0"
